--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 python-dateutil==2.8.1
 python-editor==1.0.4
-six==1.16.0
+six==1.14.0
 SQLAlchemy==1.4.18
 Werkzeug==2.0.1
+python-jose==3.3.0
+botocore==1.23.54
+babel==2.11.0
